# eo-data-utils

./: .gitignore  README.md  environment.yml  pyproject.toml
data/: README.md  extractor.py  ftp_downloader.py  test.yml
data/copernicus/: README.md  test_download_loop.py
data/examples/: cmems_example.yml
data/sentinel/: README.md
data/tests/: rebex.yml  test_downloader.py  test_extractor.py
eo_data_utils/: ftp_downloader.py  matching.py
eo_data_utils/tests/: test_downloader.py  test_extractor.py
examples/download_cmems_insitu/: config.yml  script.py
experiments/simple_densenet/: README.md  densenet.ipynb
sfs/: __init__.py
sfs/data_utils/: matching.py
utils/: xarray_examples.py
