[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sfs"
authors = [{name = "Joe Marsh Rossney"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Source = "https://github.com/marshrossney/salinity-from-space"

[tool.flit.module]
name = "sfs"
