[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "eo-data-utils"
authors = [{name = "Joe Marsh Rossney"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Source = "https://github.com/marshrossney/eo-data-utils"

[tool.flit.module]
name = "eo_data_utils"
